# jouledb

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
crates/inv-auth/: Cargo.toml
crates/inv-auth/src/: apikey.rs  attestation_auth.rs  audit.rs  email.rs  jwt.rs  lib.rs  mfa.rs  oidc.rs  passkey.rs  rbac.rs  revocation.rs  session.rs  webauthn.rs
crates/inv-crypto/: Cargo.toml
crates/inv-crypto/src/: acme.rs  certificates.rs  encryption.rs  identity.rs  inventory.rs  lib.rs  pq_tls.rs  secrets.rs  supply_chain.rs  tls.rs
crates/inv-energy/: Cargo.toml
crates/inv-energy/src/: apple.rs  baselines.rs  battery.rs  bridge.rs  budget.rs  carbon.rs  carbon_aggregator.rs  carbon_api.rs  carbon_fusion.rs  cfe_matching.rs  compliance_report.rs  daily_report.rs  energy_label.rs  eu_compliance.rs  global_grid.rs  hf_energy_score.rs  hwdetect.rs  intermittent.rs  joule_meter.rs  ledger.rs  lib.rs  meter.rs  metrics.rs  nvml.rs  passport.rs  product_budget.rs  proptest_carbon.rs  proptest_ledger.rs  rapl.rs  rate_provider.rs  receipt.rs  sci.rs  ternary_energy.rs  wasm_energy.rs
crates/inv-identity/: Cargo.toml
crates/inv-identity/src/: attestation.rs  did.rs  lib.rs  vc.rs
crates/inv-mcp-core/: Cargo.toml
crates/inv-mcp-core/src/: lib.rs
crates/inv-pqcrypto/: Cargo.toml
crates/inv-pqcrypto/src/: kem.rs  lib.rs  sign.rs  tls.rs
crates/inv-telemetry/: Cargo.toml
crates/inv-telemetry/src/: bench.rs  counter.rs  events.rs  export.rs  gauge.rs  health.rs  histogram.rs  lib.rs  loop_timer.rs  registry.rs  span_collector.rs  trace_context.rs
crates/inv-vm-core/: Cargo.toml
crates/inv-vm-core/src/: attestation.rs  capability.rs  compliance.rs  compute.rs  disarm.rs  energy.rs  error.rs  identity.rs  lib.rs  payment.rs  policy.rs  privacy.rs
crates/joule-db-amorphic/: ARCHITECTURE.md  Cargo.toml  README.md
crates/joule-db-amorphic/benches/: amorphic_bench.rs  ann_benchmark.rs  competitive_bench.rs  content_infra_bench.rs  ldbc_benchmark.rs  multimodel_bench.rs  stress_test.rs  tpch_benchmark.rs  ycsb_benchmark.rs
crates/joule-db-amorphic/src/: accessibility.rs  ad_targeting.rs  auth.rs  batch.rs  columnar.rs  content_id.rs  distributed.rs  distribution.rs  durable.rs  events.rs  gpu.rs  hologram_sync.rs  hybrid_search.rs  lib.rs  materialized.rs  memory.rs  moderation.rs  optimizer.rs  partition.rs  persistence.rs  platform.rs  royalty.rs  selective_replication.rs  spatial.rs  sql.rs  streaming.rs  temporal_fields.rs  tenant.rs  tiered.rs  trending.rs  tx.rs  voiceprint.rs
crates/joule-db-amorphic/tests/: shard_routing.rs
crates/joule-db-branch/: Cargo.toml  README.md
crates/joule-db-branch/src/: energy.rs  lib.rs  manager.rs  storage.rs
crates/joule-db-client/: Cargo.toml  README.md
crates/joule-db-client/src/: client.rs  connection.rs  error.rs  lib.rs  pool.rs  protocol.rs
crates/joule-db-core/: Cargo.toml  README.md
crates/joule-db-core/src/: encryption.rs  error.rs  kani_proofs.rs  lib.rs  proptest_verify.rs  snapshot.rs
crates/joule-db-core/tla/: MVCC.tla
crates/joule-db-crdt/: Cargo.toml  README.md
crates/joule-db-crdt/src/: lib.rs  types.rs
crates/joule-db-domains/: Cargo.toml  README.md
crates/joule-db-domains/src/: adtech.rs  agri.rs  auto.rs  cyber.rs  edu.rs  energy.rs  gaming.rs  genomics.rs  graph.rs  health.rs  insurance.rs  iot.rs  legal.rs  lib.rs  media.rs  multimodal.rs  retail.rs  spatial.rs  supply.rs  telecom.rs  temporal.rs
crates/joule-db-energy/: Cargo.toml  README.md
crates/joule-db-energy/src/: advisor.rs  bridge.rs  budget.rs  controller.rs  lib.rs  monitor.rs  router.rs  tracker.rs
crates/joule-db-features/: Cargo.toml  README.md
crates/joule-db-features/src/: columnar.rs  embeddings.rs  fulltext.rs  graph.rs  lib.rs  persistence.rs  simd.rs  vector.rs
crates/joule-db-gpu/: Cargo.toml  README.md
crates/joule-db-gpu/src/: backend.rs  btree_serialization.rs  hdc_compute.rs  lib.rs  shaders.rs
crates/joule-db-hdc/: Cargo.toml  PRIMITIVES.md  README.md
crates/joule-db-hdc/benches/: capacity_curve.rs
crates/joule-db-hdc/src/: amorphic_engine_storage.rs  binary_hd.rs  bridge.rs  domain.rs  domain_macro.rs  error.rs  fourier_bind.rs  gpu_dispatch.rs  holographic_kv.rs  lib.rs  map_bind.rs  neural_lsh.rs  qhed_storage.rs  quantum_inspired.rs  radix_spline.rs  resonator.rs  simd.rs  simd_wasm.rs  tensor_network.rs  ternary_hv.rs  turbo_holographic.rs  variational.rs
crates/joule-db-hdc/tests/: turbo_holographic_tests.rs
crates/joule-db-langgraph/: Cargo.toml  README.md
crates/joule-db-langgraph/src/: checkpoint.rs  error.rs  lib.rs  messages.rs
crates/joule-db-ledger/: Cargo.toml  README.md
crates/joule-db-ledger/src/: backend.rs  backend_eth.rs  backend_file.rs  backend_memory.rs  batch.rs  carbon.rs  collector.rs  committer.rs  error.rs  http.rs  lib.rs  merkle.rs  receipt.rs
crates/joule-db-ledger/tests/: stress_ledger.rs
crates/joule-db-local/: Cargo.toml  README.md
crates/joule-db-local/src/: bloom.rs  lib.rs  recovery.rs  snapshot_registry.rs
crates/joule-db-local/tests/: acid_bank.rs  mvcc_concurrent.rs
crates/joule-db-query/: Cargo.toml  README.md
crates/joule-db-query/src/: adaptive.rs  amorphic_executor.rs  arrow.rs  ast.rs  columnar.rs  cql.rs  cypher.rs  datafusion_backend.rs  datalog.rs  error.rs  execution.rs  execution_parallel.rs  execution_timeout_integration.rs  executor.rs  functions.rs  geo.rs  graph.rs  graphql.rs  gremlin.rs  hdc.rs  jsonb.rs  lib.rs  planner.rs  prepared.rs  qhed_executor.rs  sparql.rs  sql.rs  storage_executor.rs  timeout.rs  timeseries.rs  triggers.rs  vector.rs  wcoj.rs  wcoj_cost.rs
crates/joule-db-query/tests/: stress_functions.rs  stress_storage.rs  test_ctes.rs  test_window_functions.rs
crates/joule-db-server/: Cargo.toml  README.md
crates/joule-db-server/benches/: multimodel.rs
crates/joule-db-server/src/: agent_memory.rs  (+71 more)
crates/joule-db-viz/: Cargo.toml  README.md
crates/joule-energy/: Cargo.toml
crates/joule-runtime/: Cargo.toml
crates/joule-web/: Cargo.toml
crates/jpb-core/: Cargo.toml
crates/jwp/: Cargo.toml
(+2146 files in other folders)
