[package]
name = "inv-auth"
description = "Identity, authentication, and authorization for Invisible Infrastructure"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
inv-core = { path = "../inv-vm-core", package = "inv-vm-core" }
inv-crypto = { workspace = true }
inv-identity = { workspace = true }
jsonwebtoken = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
sha2 = { workspace = true, features = ["oid"] }
hmac = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
lettre = { workspace = true }
ed25519-dalek = { workspace = true }
p256 = { workspace = true }
rsa = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
ed25519-dalek = { workspace = true }
p256 = { workspace = true }
rsa = { workspace = true }
