[package]
name = "inv-crypto"
description = "Cryptographic operations for Invisible Infrastructure — identity, certificates, mTLS, encryption"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
inv-core = { path = "../inv-vm-core", package = "inv-vm-core" }
inv-pqcrypto = { workspace = true }
rustls = { workspace = true }
aws-lc-rs = { workspace = true }
ed25519-dalek = { workspace = true }
rcgen = { workspace = true }
x509-parser = { workspace = true }
rustls-pemfile = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
rand_core_06 = { package = "rand_core", version = "0.6", features = ["getrandom"] }
zeroize = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base32 = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
