[package]
name = "inv-pqcrypto"
description = "Post-quantum cryptography: real ML-KEM-768 (FIPS 203), ML-DSA-65 (FIPS 204), hybrid modes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
inv-core = { path = "../inv-vm-core", package = "inv-vm-core" }
serde = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
rand_core_06 = { package = "rand_core", version = "0.6", features = ["getrandom"] }
sha2 = { workspace = true }

# Real post-quantum cryptography
ml-kem = { workspace = true }
fips204 = { workspace = true }

# Real classical cryptography for hybrid modes
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
