[package]
name = "joule-db-branch"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Copy-on-write database branching with energy budgets for JouleDB"
keywords = ["database", "branching", "copy-on-write", "energy"]
categories = ["database-implementations"]

[features]
default = []
energy-budget = []

[dependencies]
joule-db-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
