[package]
name = "joule-db-features"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Specialized feature modules for JouleDB"
repository = "https://github.com/joule-db/joule-db"
keywords = ["database", "timeseries", "graph", "vector", "search"]
categories = ["database"]

[dependencies]
joule-db-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["timeseries", "graph", "vector", "fulltext", "embeddings", "columnar"]
timeseries = []
graph = []
vector = []
fulltext = []
embeddings = []
columnar = []

[lints]
workspace = true
