[package]
name = "joule-db-local"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Native/local storage backend for JouleDB with file support"

[features]
default = ["file"]
file = []
mmap = ["dep:memmap2"]
server = ["dep:tokio"]
adaptive = ["dep:joule-db-energy"]

[dependencies]
joule-db-core = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
log = { workspace = true }
tracing = { workspace = true }

# Optional backends
memmap2 = { workspace = true, optional = true }

# Adaptive energy controller
joule-db-energy = { workspace = true, optional = true }

# Async runtime (for server)
tokio = { workspace = true, optional = true, features = ["net", "io-util", "sync"] }

# File locking
fs2 = { workspace = true }

# Locks — parking_lot's RwLock/Mutex never poison, so production
# acquisition paths don't need .unwrap() and the substrate can hold
# the `errors.panics = []` invariant honestly.
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "io-util", "macros"] }

[[bin]]
name = "joule-db-recover"
path = "src/bin/joule_db_recover.rs"

[lints]
workspace = true
